Added card template for first set of variables - unstyled

--- a/index.html
+++ b/index.html
@@ -44,11 +44,72 @@
     </span>
   </div>
 </nav>
-
 </header>
 <section>
+<div class="container-xl div1">
 <h1>Delimma Zone Calculator</h1>
+<p>Add your variables to the calculator - you will need to supply all the variables before being able to calculate whether or not a dilemma zone exists.</p>
+<p>If a delimma zone exists, the output will show you the distance from the traffic light stop line and the size of the delimma zone.</p>
+<p>The other possibility is that an option zone exists, this will be displayed as a distance from the traffic light stop line and the size of the option zone will also be given.</p>
+</div>
 </section>
+<!--Cards for variable inputs-->
+<section class="container">
+
+
+      <div class="row">
+        <div class="col-12 div2">
+          <h2>Maximum Travelling Distance</h2>
+          <p class="card-text">
+            Input the variables for velocity, yellow light phase and interphase.
+          </p>
+        </div>
+      </div>      
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4 div3">
+          <div class="card shadow bg-white rounded" 
+                data-toggle="modal" 
+                data-target="#bt1">
+                <div class="card-body">
+              <h5 class="card-title text-center" id="bt-font1">Velocity (choose units)</h5>
+                </div>
+            <img
+              src="assets/images/card-images/velocity.png"
+              class="card-img-top"
+              alt="velocity image"
+              />
+           </div>
+        </div>
+           <div class="col-xs-12 col-sm-6 col-md-4 div3">
+          <div class="card shadow bg-white rounded" 
+                data-toggle="modal" 
+                data-target="#bt2">
+                <div class="card-body">
+              <h5 class="card-title text-center" id="bt-font2">Yellow Light Phase (s)</h5>
+                </div>
+            <img
+              src="assets/images/card-images/yellow.png"
+              class="card-img-top"
+              alt="velocity image"
+              />
+           </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 div3">
+          <div class="card shadow bg-white rounded" 
+                data-toggle="modal" 
+                data-target="#bt3">
+                <div class="card-body">
+              <h5 class="card-title text-center" id="bt-font3">Interphase (s)</h5>
+                </div>
+            <img
+              src="assets/images/card-images/red.png"
+              class="card-img-top"
+              alt="velocity image"
+              />
+           </div>
+        </div>
+</section>
+
  <!-- Footer -->
 <footer class="page-footer font-small darken-3">
 
