Added 2 rows of cards and images for calculator

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             <img
               src="assets/images/card-images/yellow.png"
               class="card-img-top"
-              alt="velocity image"
+              alt="yellow traffic light image"
               />
            </div>
         </div>
@@ -104,10 +104,70 @@
             <img
               src="assets/images/card-images/red.png"
               class="card-img-top"
-              alt="velocity image"
+              alt="red traffic light image"
               />
            </div>
         </div>
+      </div>
+
+      <!-- Second Row of Cards-->  
+       <div class="row">
+        <div class="col-12 div2">
+<h2>Reaction Distance, coeffecient of friction and intersection distance</h2>
+          <p class="card-text">
+            Input the reaction time for the driver (s), the coefficient of friction (0 - 1) and the size of the intersection from stop line to opposite stop line.
+          </p>
+        </div>
+      </div>      
+      <div class="row">
+        <div class="col-xs-12 col-sm-6 col-md-4 div3">
+          <div class="card shadow bg-white rounded" 
+                data-toggle="modal" 
+                data-target="#bt4">
+                <div class="card-body">
+              <h5 class="card-title text-center" id="bt-font4">Reaction time (s)</h5>
+                </div>
+            <img
+              src="assets/images/card-images/stopwatch.png"
+              class="card-img-top"
+              alt="stopwatch image"
+              />
+           </div>
+        </div>
+           <div class="col-xs-12 col-sm-6 col-md-4 div3">
+          <div class="card shadow bg-white rounded" 
+                data-toggle="modal" 
+                data-target="#bt5">
+                <div class="card-body">
+              <h5 class="card-title text-center" id="bt-font5">Coefficient of friction (μ)</h5>
+                </div>
+            <img
+              src="assets/images/card-images/friction.png"
+              class="card-img-top"
+              alt="tyre image representing friction"
+              />
+           </div>
+        </div>
+        <div class="col-xs-12 col-sm-6 col-md-4 div3">
+          <div class="card shadow bg-white rounded" 
+                data-toggle="modal" 
+                data-target="#bt3">
+                <div class="card-body">
+              <h5 class="card-title text-center" id="bt-font6">Intersection distance (m)</h5>
+                </div>
+            <img
+              src="assets/images/card-images/intersection.png"
+              class="card-img-top"
+              alt="traffic intersection image"
+              />
+           </div>
+        </div>
+      </div>
+
+        
+
+
+           
 </section>
 
  <!-- Footer -->
