Added first form ready for functionality

--- a/index.html
+++ b/index.html
@@ -78,6 +78,18 @@
               class="card-img-top"
               alt="velocity image"
               />
+              <div class="container width-box">
+              <form>
+              <label for="initialVelocity">Velocity</label><br>
+              <input type="number" id="initialVelocity" onfocus="this.value=''"><br>
+              <label for="units">Units</label><br>
+              <select name="units" id="units" style="width:60px;">
+              <option value="unit-kmh">km/h</option>
+              <option value="unit-ms">m/s</option>
+              <option value="mph">mph</option>
+              </select>
+              </form>
+              </div>
            </div>
         </div>
            <div class="col-xs-12 col-sm-6 col-md-4 div3">
@@ -92,6 +104,7 @@
               class="card-img-top"
               alt="yellow traffic light image"
               />
+              
            </div>
         </div>
         <div class="col-xs-12 col-sm-6 col-md-4 div3">
