Added units to calculations and dilemma zone number

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           <div class="container width-box">
             <form>
               <label for="initialVelocity">Velocity</label><br>
-              <input type="number" id="initialVelocity"><br>
+              <input type="number" id="initialVelocity" value="10"><br>
               <label for="units">Units</label><br>
               <select name="units" id="units" style="width:60px;">
                 <option value="unit-kmh">km/h</option>
@@ -98,7 +98,7 @@
             <div class="container width-box">
             <form class="form-padding">
               <label for="yellowPhase">Time of yellow phase in seconds</label><br>
-              <input type="number" id="yellowPhase" min="1" max="8"><br>
+              <input type="number" id="yellowPhase" value="4" min="1" max="8"><br>
             </form>
             </div> 
         </div>
@@ -112,7 +112,7 @@
           <div class="container width-box">
             <form class="form-padding">
               <label for="interPhase">Time of interphase in seconds</label><br>
-              <input type="number" id="interPhase" min="1" max="4"><br>
+              <input type="number" id="interPhase" value="2" min="1" max="4"><br>
             </form>
             </div> 
         </div>
@@ -138,7 +138,7 @@
           <div class="container width-box">
             <form class="form-padding">
               <label for="reactionTime">Reaction time in seconds</label><br>
-              <input type="number" id="reactionTime" min="0" max="3"><br>
+              <input type="number" id="reactionTime" value="1" min="0" max="3"><br>
             </form>
         </div>
       </div>
@@ -152,7 +152,7 @@
           <div class="container width-box">
             <form class="form-padding">
               <label for="friction">Coefficient of friction</label><br>
-              <input type="number" id="friction" min="0" max="1"><br>
+              <input type="number" id="friction" value="0.8" min="0" max="1"><br>
             </form>
         </div>
       </div>
@@ -166,7 +166,7 @@
           <div class="container width-box">
             <form class="form-padding">
               <label for="intersection">Length of intersection</label><br>
-              <input type="number" id="intersectionDistance"><br>
+              <input type="number" value="40" id="intersectionDistance"><br>
             </form>
         </div>
         </div>
