Added logos and Raleway font

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
 <body>
   <header>
     <!-- Logo and text in Navbar-->
-    <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #e3f2fd;">
+    <nav class="navbar navbar-expand-lg navbar-light bg-info">
       <a class="navbar-brand" href="index.html">
-        <img src="assets/images/logo-1.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
+        <img src="assets/images/logo-main.png" width="30" height="30" class="d-inline-block align-top" alt="Physics Code Logo" loading="lazy">
         Physics Code
       </a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,13 +33,13 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav mr-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
+            <a class="nav-link nav-text" href="index.html">Home <span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="help.html">Help</a>
+            <a class="nav-link nav-text" href="help.html">Help</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">Contact</a>
+            <a class="nav-link nav-text" href="contact.html">Contact</a>
           </li>
         </ul>
         <span class="navbar-text">
