--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
           <div class="card-body">
             <h5 class="card-title text-center" id="bt-font1">Velocity (choose units)</h5>
           </div>
-          <img src="assets/images/card-images/velocity.png" class="card-img-top" alt="velocity image" />
+          <img src="assets/images/card-images/velocity.png" class="car-image" alt="velocity image" />
           <div class="container width-box">
             <form>
               <label for="initialVelocity">Velocity</label><br>
