--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
       <div class="col-xs-12 col-sm-6 col-md-4 div3">
         <div class="card shadow bg-white rounded">
           <div class="card-body">
-            <h5 class="card-title text-center">Intersection distance (m)</h5>
+            <h5 class="card-title text-center">Intersection distance (units)</h5>
           </div>
           <div class="container text-center">
           <a tabindex="0" 
@@ -239,8 +239,8 @@
               <input type="number" value="40" id="intersectionDistance"><br>
               <label for="length-units">Units</label><br>
               <select name="units" id="length-units" style="width:60px;">
-                <option value="yd">km/h</option>
-                <option value="m" selected>m/s</option>
+                <option value="yd">yd</option>
+                <option value="m" selected>m</option>
                 </select>
             </form>
         </div>
