Added conversion for velocity and distance

--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     </div>
 <form>
 
-<input type="button" onclick="convert();dilemmaZone()" value="Calculate" />
+<input type="button" onclick="convert();convertDistance();dilemmaZone()" value="Calculate" />
 </form>
 <p>The Phase Distance is : <br>
 <span id = "phaseDistance"></span>
@@ -314,6 +314,9 @@
 </p>
 <p>Result of conversion : <br>
 <span id = "conversion"></span>
+</p>
+<p>Result of intersection distance : <br>
+<span id = "conversion-dist"></span>
 </p>
   </section>
 
