Fixed decimal places for outputs

--- a/index.html
+++ b/index.html
@@ -312,10 +312,10 @@
 <p>Zone : <br>
 <span id = "zone"></span>
 </p>
-<p>Result of conversion : <br>
+<p>Result of velocity conversion : <br>
 <span id = "conversion"></span>
 </p>
-<p>Result of intersection distance : <br>
+<p>Result of intersection distance conversion : <br>
 <span id = "conversion-dist"></span>
 </p>
   </section>
