--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           <div class="container width-box">
             <form class="form_reset">
               <label for="initialVelocity">Velocity</label><br>
-              <input type="number" id="initialVelocity" class="reset_form numbers" value="10"><br>
+              <input type="text" onkeypress="return isNumberKey(event)" id="initialVelocity" class="reset_form numbers" value="10" required><br>
               <label for="units">Units</label><br>
               <select name="units" id="units" style="width:60px;">
                 <option value="kmh">km/h</option>
@@ -120,7 +120,7 @@
             <div class="container width-box">
             <form class="form-padding">
               <label for="yellowPhase">Time of yellow phase in seconds</label><br>
-              <input type="number" id="yellowPhase" class="reset_form numbers" value="4" min="1" max="8"><br>
+              <input type="text" onkeypress="return isNumberKey(event)" id="yellowPhase" class="reset_form numbers" value="4" min="1" max="8" required><br>
             </form>
             </div> 
         </div>
@@ -147,7 +147,7 @@
           <div class="container width-box">
             <form class="form-padding">
               <label for="interPhase">Time of interphase in seconds</label><br>
-              <input type="number" id="interPhase" class="reset_form numbers" value="2" min="1" max="4"><br>
+              <input type="text" onkeypress="return isNumberKey(event)" id="interPhase" class="reset_form numbers" value="2" min="1" max="4" required><br>
             </form>
             </div> 
         </div>
@@ -186,7 +186,7 @@
           <div class="container width-box">
             <form class="form-padding-2">
               <label for="reactionTime">Reaction time in seconds</label><br>
-              <input type="number" id="reactionTime" class="reset_form numbers" value="1" min="0" max="3"><br>
+              <input type="text" onkeypress="return isNumberKey(event)" id="reactionTime" class="reset_form numbers" value="1" min="0" max="3" required><br>
             </form>
         </div>
       </div>
@@ -211,7 +211,7 @@
           <div class="container width-box">
             <form class="form-padding-2">
               <label for="friction">Coefficient of friction</label><br>
-              <input type="number" id="friction" class="reset_form numbers" value="0.8" min="0" max="1"><br>
+              <input type="text" onkeypress="return isNumberKey(event)" id="friction" class="reset_form numbers" value="0.8" min="0" max="1" required><br>
             </form>
         </div>
       </div>
@@ -237,7 +237,7 @@
           <div class="container width-box">
             <form class="form-padding">
               <label for="intersection">Length of intersection</label><br>
-              <input type="number" id="intersectionDistance" class="reset_form numbers" value="40"><br>
+              <input type="text" onkeypress="return isNumberKey(event)" id="intersectionDistance" class="reset_form numbers" value="40" required><br>
               <label for="length-units">Units</label><br>
               <select name="units" id="length-units" style="width:60px;">
                 <option value="yd">yd</option>
@@ -282,7 +282,7 @@
           <div class="container width-box">
             <form class="form-padding">
               <label for="length">Length of vehicle (m)</label><br>
-              <input type="number" id="length" class="reset_form numbers" value="4.5"><br>
+              <input type="text" onkeypress="return isNumberKey(event)" id="length" class="reset_form numbers" value="4.5" required><br>
             </form>
         </div>
         </div>
