Fixed error displaying incorrec average vehicle length

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
           <div class="card shadow">
             <img class="card-img-top img-fluid" src="assets/images/card-images/intersection.png" alt="Input Intersection Distance">
             <div class="card-body">
-              <h5 class="card-title">Intersection Dist. (m) 
+              <h5 class="card-title">Intersection (m) 
               <a 
               tabindex="0" 
               class="btn btn-link" 
@@ -303,7 +303,7 @@
         <div class="col-12 div2">
           <h2>Vehicle Length</h2>
           <p class="card-text">
-            Input the size of the vehicle, default is 6 metres.
+            Input the size of the vehicle, default is 4.5 metres.
           </p>
         </div>
       </div>
