Fixed spelling errors and removed negative symbol from dilemma zone calculation

--- a/index.html
+++ b/index.html
@@ -55,11 +55,11 @@
   </header>
   <section>
     <div class="container div1">
-      <h1>Delimma Zone Calculator</h1>
+      <h1>Dilemma Zone Calculator</h1>
       <p class="lead">Add your variables to the calculator - you will need to supply all the variables before being able to
         calculate whether or not a dilemma zone exists.</p>
-      <p class="lead">If a delimma zone exists, the output will show you the distance from the traffic light stop line and
-        the size of the delimma zone.</p>
+      <p class="lead">If a dilemma zone exists, the output will show you the distance from the traffic light stop line and
+        the size of the dilemma zone.</p>
       <p class="lead my-0">The other possibility is that an option zone exists, this will be displayed as a distance from
         the traffic light stop line and the size of the option zone will also be given.</p><br>
     </div>
@@ -279,7 +279,7 @@
                   <i class="far fa-question-circle fa-2x"></i>
                 </a></h5>
               <br>
-              <label for="intersection">Length of intersection</label><br>
+              <label for="intersectionDistance">Length of intersection</label><br>
               <input 
               type="number" 
               onkeypress="return isNumberKey(event)" 
@@ -384,7 +384,7 @@
             <p>The Maximum Distance the vehicle is from stopline : <br>
               <span id="maxDistance"></span>
             </p>
-            <p>Numbers that are negative indicate a delimma zone. Positive numbers indicate an option zone : <br>
+            <p>Numbers that are negative indicate a dilemma zone. Positive numbers indicate an option zone : <br>
               <span id="total"></span>
             </p>
             <p>Zone : <br>
