--- a/game.html
+++ b/game.html
@@ -95,10 +95,11 @@
             id="start_button" 
             onclick="makeGreen(); setTimerAmount()"
             >Start</button>
-            <button
+            <button type="submit"
             class="btn btn-danger btn-lg btn--padding btn_hide_brakes"
             id="brake_button"
-            >Brakes</button> 
+            >Brakes</button>
+            <p id="time"></p> 
             
 </div>
             </div>
